--- a/tags/1.0.4/admin.css
+++ b/tags/1.0.4/admin.css
@@ -45,10 +45,7 @@
     margin-bottom: 20px;
 }
 
-img.paypal {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
+img.paypal {margin-bottom: 10px;}
 
 .atitle {
     margin-top: 0;
